src/components/Detail/styles.sass
@import "~@shared/styles/colors.sass"
@import "~@shared/styles/breakpoints.sass"

.sidebar
  display: flex
  flex-flow: column
  background-color: $background-grey

.content
  padding: 10px 15px
  border: 2px solid $dark-grey
  font-size: 14px

  @include breakpoint(small)
    padding: 15px 10px 10px

.content
  flex: auto
  position: relative
  overflow: auto

.title
  font-size: 18px
  margin: 0
  margin-bottom: 0
  margin-right: 5px
  line-height: 1.2em
  color: $red

  @include breakpoint(small)
    font-size: 16px

.helpText
  color: $dark-grey
  font-size: 14px
  font-weight: bold
  line-height: 1.3em
  text-align: center
  padding: 5px 10px

  p
    margin: 0 10px
    width: 50%

  @include breakpoint(small)
    padding: 10px 30px

